--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>radiant-threads</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>B3 Boutique — Royal Ethnic Couture</title>
+    <meta name="description" content="Curated couture in emerald and gold — bridal, festival, and signature collections." />
+    <meta name="author" content="B3 Boutique" />
 
-    <meta property="og:title" content="radiant-threads" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="B3 Boutique — Royal Ethnic Couture" />
+    <meta property="og:description" content="Curated couture in emerald and gold — bridal, festival, and signature collections." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
